# Brent-Oil-Price-Change-Point-Analysis

./: .gitignore  README.md  pyproject.toml  requirements-dev.txt  requirements.txt  setup.py
config/: config.yaml
dashboard/: README.md
dashboard/backend/: app.py
dashboard/frontend/: package.json
dashboard/frontend/public/: index.html
dashboard/frontend/src/: App.css  App.js  index.css
dashboard/frontend/src/components/: ChangePointAnalysis.js  Dashboard.css  Dashboard.js  DataSummary.js  ErrorMessage.css  ErrorMessage.js  EventCorrelation.js  ExportControls.js  FilterControls.js  Footer.js  Header.css  Header.js  KeyInsights.js  LoadingSpinner.css  LoadingSpinner.js  PriceChart.js
dashboard/frontend/src/services/: api.js
data/: README.md
docs/: METHODOLOGY.md
notebooks/: Bayesian_change_point_detection_using_PyMC3.ipynb  Brent_Oil_Price_Change_Point_Analysis .ipynb
results/: README.md
src/: README.md
tests/: test_example.py
